# Oos-2024

./: .gitignore  Makefile  README.md  rust-toolchain.toml
dependency/k210-soc/: Cargo.toml
easy-fs-fuse/src/: main.rs
os/: Cargo.toml  Makefile  buildfs.sh
os/.cargo/: config.toml
os/src/: config.rs  link_initial_apps.S  loader.rs  main.rs  timer.rs
os/src/drivers/block/: block_dev.rs  mod.rs  virtio_blk.rs
os/src/fs/: cache.rs  directory_tree.rs  file_trait.rs  layout.rs  mod.rs
os/src/fs/dev/: hwclock.rs  mod.rs  null.rs  pipe.rs  socket.rs  stdio.rs  zero.rs
os/src/fs/fat32/: inode.rs  layout.rs  mod.rs
os/src/mm/: frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/syscall/: config.rs  errno.rs  fs.rs  mod.rs  process.rs  sync.rs
os/src/task/: id.rs  manager.rs  mod.rs  process.rs  processor.rs  task.rs
os/src/trap/: mod.rs
test/: visualize_result.py
test/riscv64/: brk  chdir  clone  close  dup  dup2  execve  exit  fork  fstat  getcwd  getdents  getpid  getppid  gettimeofday  mkdir_  mmap  mount  munmap  open  openat  pipe  read  sleep  test_echo  times  umount  uname  unlink  wait  waitpid  write  yield
user/: Cargo.toml
user/.cargo/: config
user/cargo-submit/: config.toml
user/src/: lib.rs  syscall.rs
