[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { path = "../dependency/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.8"
# bitflags = "1.2.1"
bitflags = "1.3.2"
xmas-elf = "0.7.0"
virtio-drivers = { path = "../dependency/virtio-drivers" }

log = "0.4"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
spin = "0.7"
downcast-rs = { version = "1.2.0", default-features = false }
num_enum = { version = "0.5", default-features = false }


[features]
show_syscall = []
board_qemu = []


[profile.release]
debug = true
